# eureka-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: aws.rs  client.rs  instance.rs  lib.rs  register.rs  registry.rs  resolver.rs
src/rest/: mod.rs  structures.rs
