[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "eureka"
version = "0.1.0"

[dependencies]
hyper = "0.10.5"
lazy_static = "0.2.5"
log = "0.3.5"
quick-error = "1.1.0"
reqwest = "0.5.0"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"

[dependencies.clippy]
optional = true
version = "*"
