[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "eureka"
version = "0.1.0"

[dependencies]
lazy_static = "1.0.0"
log = "0.3.5"
quick-error = "1.1.0"
reqwest = "0.8.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_yaml = "0.7.0"

[dependencies.clippy]
optional = true
version = "*"
