[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "eureka-client"
description = "Handles HTTP requests to and registering a service with Eureka"
repository = "https://github.com/shssoichiro/eureka-rs"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/eureka-client"
version = "0.0.4"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4.0"
quick-error = "1.1.0"
reqwest = "0.9.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
percent-encoding = "1.0.1"
itertools = "0.7.4"
